# judge-dread

./: .gitignore  README.md  proposal.md  pyproject.toml
.github/workflows/: tests.yml
docs/: BUILD_NOTES.md  PRIMER.md
docs/superpowers/plans/: 2026-07-06-judgedread-gemini.md
examples/: system_prompt.txt  test_suite.json
judgedread/: cli.py  engine.py  evaluators.py  models.py  report.py
tests/: test_cli.py  test_engine.py  test_evaluators_deterministic.py  test_evaluators_judge.py  test_models.py  test_report.py
