[project]
name = "judgedread"
version = "0.1.0"
description = "Local-first AI evals and prompt regression framework, built on Gemini's free tier"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "google-genai>=0.3.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["judgedread"]
